docs: Add ecosystem info, use cases, and integrations
- Use Cases: Music, Food, Travel, Developer Tools, Finance, Career
- Semantic Firewall™ explanation
- CustomGPT link (official ChatGPT integration)
- PrefID MCP Server link
- AI Agents compatibility (LangChain, AutoGPT, CrewAI, etc)
- Shopify integrations mention
- 104 weekly downloads milestone 🎉
- Contact: sriram.srinivasdesikan@gmail.com
- Fixed repo link to public PREFID-SDK repo

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Talentxmdu/PrefID.git",
-        "directory": "sdk"
+        "url": "https://github.com/Talentxmdu/PREFID-SDK.git"
     },
     "homepage": "https://pref-id.vercel.app",
     "bugs": {
