--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,7 +41,7 @@
         "react-dom": "^17.0.0 || ^18.0.0"
     },
     "dependencies": {
-        "@prefid/sdk": "file:../.."
+        "@prefid/sdk": "^0.2.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.0",
