chore: Update domain references to prefid.in

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "type": "git",
         "url": "https://github.com/Talentxmdu/PREFID-SDK.git"
     },
-    "homepage": "https://pref-id.vercel.app",
+    "homepage": "https://prefid.in",
     "bugs": {
         "url": "https://github.com/Talentxmdu/PrefID/issues"
     },
